# routes/api.php
@@ -1,26 +1,41 @@
 <?php
 
 use App\Http\Controllers\SessionController;
+use App\Http\Controllers\Session\ScheduleSessionController;
+use App\Http\Controllers\Session\CompleteSessionController;
+use App\Http\Controllers\Session\CancelSessionController;
+use App\Http\Controllers\Session\RescheduleSessionController;
+use App\Http\Controllers\Session\ListSessionsController;
+use App\Http\Controllers\Session\ShowSessionController;
+
 use Illuminate\Support\Facades\Route;
 
-Route::post('/sessions', [SessionController::class, 'store']);
+Route::post(
+    '/sessions',
+    [ScheduleSessionController::class, 'store']
+);
 
 Route::patch(
     '/sessions/{id}/complete',
-    [SessionController::class, 'complete']
+    [CompleteSessionController::class, 'complete']
 );
 
 Route::patch(
     '/sessions/{id}/cancel',
-    [SessionController::class, 'cancel']
+    [CancelSessionController::class, 'cancel']
 );
 
 Route::patch(
     '/sessions/{id}/reschedule',
-    [SessionController::class, 'reschedule']
+    [RescheduleSessionController::class, 'reschedule']
 );
 
 Route::get(
     '/sessions',
-    [SessionController::class, 'index']
+    [ListSessionsController::class, 'index']
+);
+
+Route::get(
+    '/sessions/{id}',
+    [ShowSessionController::class, 'show']
 );
